# SFMLTemplate

./: CMakeLists.txt
cmake/: Dependencies.cmake
src/: main.cpp
